fix(ui): Adjust UI and fix minor layout issues
- Refined `CartDrawer.jsx` and `CartDrawerFooter.jsx` for better layout.
- Added `CustomSpin.jsx` for improved loading experience.
- Fixed UI inconsistencies in `CartPage.jsx` and `CartPriceInfo.jsx`.
- Improved `CheckoutCustomerInfo.jsx` and `CustomCollapse.jsx` appearance.
- Adjusted styling and interactions in `ProductDetail` components.
- Updated `FilterPanel.jsx` to enhance usability.

--- a/frontend/src/pages/ProductList/ProductList.css
+++ b/frontend/src/pages/ProductList/ProductList.css
@@ -6,3 +6,12 @@
 .custom-pagination .ant-pagination-item-active {
   border-color: #675746 !important; /* Màu viền */
 }
+
+.custom-pagination .ant-pagination-options-quick-jumper input:focus,
+.custom-pagination .ant-pagination-options-quick-jumper input:hover {
+  border-color: #675746; /* Màu viền khi focus */
+}
+
+.custom-pagination .ant-pagination-options-quick-jumper input {
+  border-color: #675746; /* Màu viền */
+}
